<resources>
    <string name="app_name">AccommodIQ</string>
    <string name="city_center_apartment">City Center Apartment</string>
    <string name="location_address">Mileticeva 23, 21000 Novi Sad, Serbia</string>
    <string name="rating">4.92</string>
    <string name="review_count">(390)</string>
    <string name="guests">2–4 guests</string>
    <string name="reservation_guests">2 guests</string>
    <string name="price_per_night">From 45€ / night</string>
    <string name="total_price">*€ total</string>
    <string name="favorite_button">Favorite button</string>
    <string name="host">Hosted by John Doe</string>
    <string name="wifi">Wi-Fi</string>
    <string name="ac">AC</string>
    <string name="description">Welcome to our stylish urban haven in the heart of the city center.
        This contemporary accommodation seamlessly combines modern comfort with city energy. Step into tastefully designed rooms with sleek furnishings,
        offering both convenience and style. Enjoy city views, stay connected with high-speed Wi-Fi, and relax in the rooftop terrace with a panoramic cityscape.
        Whether for business or leisure, our prime location ensures easy access to the city\'s best dining, shopping, and entertainment.
        Immerse yourself in the urban experience at our chic retreat.</string>
    <string name="select_dates">Select date range</string>
    <string name="date_range">25/12/2022 – 30/12/2022</string>
    <string name="guests_hint">Guests</string>
    <string name="reserve">Reserve</string>
    <string name="reviews">Reviews</string>
    <string name="review_user_name">John Doe</string>
    <string name="review_date">25/12/2022</string>
    <string name="review_content">Perfect city escape! Stylish, central, and cozy. Loved the rooftop views. A gem in the heart of it all!</string>
    <string name="welcome_header">Welcome to AccommodIQ</string>
    <string name="welcome_subheader">Find the best apartment for you.</string>
    <string name="guest_radio_btn">Guest</string>
    <string name="owner_radio_btn">Owner</string>
    <string name="close_img_description">Close btn</string>
    <string name="register_headline">Registration</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login_headline">Login</string>
    <string name="create_account_question">Don\'t have an account?</string>
    <string name="create_account">Create account</string>
    <string name="register_btn_text">Sign up</string>
    <string name="login_btn_text">Sign in</string>
    <string name="get_started_btn">Get Started</string>

    <!--Navigation strings-->
    <string name="title_reservations">Reservations</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_search">Search</string>
    <string name="title_my_profile">My Profile</string>
    <string name="title_manage_profile">Manage profile</string>
    <string name="confirm">Confirm</string>
    <string name="delete_account">Delete Account</string>
    <string name="title_new_accommodation">New Accommodation</string>
    <string name="log_in_or_sign_up_btn_text">Log in or Sign up</string>
    <string name="sign_out">Sign Out</string>
    <string name="financial_reports">Financial Reports</string>
    <string name="prompt_change_password">Change Password</string>
    <string name="title_hint">Title</string>
    <string name="location_hint">Location</string>
    <string name="more_filters">More</string>
    <string name="clear">Clear</string>
    <string name="date_range_hint">Start date - End date</string>
    <string name="type">Accommodation Type</string>
    <string name="price">Price</string>
    <string name="min_price">Min Price</string>
    <string name="max_price">Max Price</string>

    <string name="air_conditioning">Air Conditioning</string>
    <string name="free_wifi">Free Wi-Fi</string>
    <string name="fitness_center">Fitness Center</string>
    <string name="free_parking">Free Parking</string>
    <string name="swimming_pool">Swimming Pool</string>
    <string name="private_balcony">Private Balcony</string>

    <string name="benefits">Benefits</string>

    <string-array name="accommodation_types">
        <item>Apartment</item>
        <item>House</item>
        <item>Loft</item>
        <item>Cabin</item>
        <item>Luxurious Hotel Suite</item>
        <item>Beachfront Villa</item>
    </string-array>

    <string-array name="reservation_statuses">
        <item>ALL</item>
        <item>PENDING</item>
        <item>ACCEPTED</item>
        <item>DECLINED</item>
        <item>CANCELLED</item>
    </string-array>

    <string name="apply">Apply</string>
    <string name="title_accommodation_review">Review</string>
    <string name="host_accommodations">Your accommodations</string>
    <string name="title_host_accommodations">Your accommodations</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_review">Delete review</string>
    <string name="report_review">Report review</string>
    <string name="title_profile">Profile</string>
    <string name="prompt_reported_by">Reported by:</string>
    <string name="prompt_block">Block</string>
    <string name="prompt_dismiss">Dismiss</string>
    <string name="prompt_reports">Reports</string>
    <string name="prompt_user_reports">User Reports</string>
    <string name="prompt_accept">Accept</string>
    <string name="prompt_review_approval">Review Approval</string>
    <string name="prompt_accommodation_reviews">Accommodation Reviews</string>
    <string name="prompt_show_reported_reviews">Show reported reviews</string>
    <string name="reservation_status">ACCEPTED</string>
    <string name="delete_reservation">DELETE</string>
    <string name="cancel_reservation">CANCEL</string>
    <string name="accept_reservation">ACCEPT</string>
    <string name="decline_reservation">DECLINE</string>
    <string name="reservation_guest_info">Bob Johnson (5 cancels)</string>
    <string name="prompt_delete">Delete</string>
    <string name="reported_host_reviews_title">Reported Host Reviews</string>
    <string name="prompt_host_reviews">Host Reviews</string>
    <string name="prompt_seen">Seen</string>
    <string name="notifications_heading">Notifications</string>
    <string name="null_prompt">O</string>
    <string name="save">Save</string>
    <string name="prompt_settings">Settings</string>
    <string name="title_notification_settings">Notification Settings\t</string>
    <string name="notification_settings_heading">Notification Settings</string>
    <string name="prompt_favorites">Favorite Accommodations</string>
    <string name="prompt_host_accommodations">Host Accommodations</string>
    <string name="prompt_accommodation_review">Accommodation Review</string>
    <string name="prompt_new_accommodation">New Accommodation</string>
    <string name="prompt_status">PENDING</string>
    <string name="profit">45€</string>
    <string name="reservation_count">5 reservations</string>
    <string name="export_to_pdf">Export to PDF</string>
    <string name="accommodation_report">Accommodation Report</string>
    <string name="total_revenue">Enter a date range and search</string>
    <string name="total_revenue_monthly">Select an accommodation and year and search</string>
    <string name="year_input">Enter a year</string>
</resources>