<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_reservations"
        android:name="com.example.accommodiq.ui.reservations.ReservationsFragment"
        android:label="@string/title_reservations"
        tools:layout="@layout/fragment_reservations" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.accommodiq.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.accommodiq.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.accommodiq.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_my_profile"
        android:name="com.example.accommodiq.ui.account.MyProfileFragment"
        android:label="@string/title_my_profile"
        tools:layout="@layout/fragment_my_profile" />

    <fragment
        android:id="@+id/navigation_new_accommodation"
        android:name="com.example.accommodiq.ui.newAccommodation.NewAccommodationFragment"
        android:label="New Accommodation"
        tools:layout="@layout/fragment_new_accommodation">
        <action
        android:id="@+id/action_newAccommodationFragment_to_updateAccommodationAvailabilityFragment"
        app:destination="@id/navigation_update_accommodation_availability" /></fragment>

    <fragment
        android:id="@+id/navigation_update_accommodation_availability"
        android:name="com.example.accommodiq.ui.updateAccommodationAvailability.UpdateAccommodationAvailabilityFragment"
        android:label="Update Accommodation Availability" />

    <fragment
        android:id="@+id/navigation_accommodation_review"
        android:name="com.example.accommodiq.ui.accommodationReview.AccommodationReviewFragment"
        android:label="@string/title_accommodation_review"
        tools:layout="@layout/fragment_accommodation_review" />

    <fragment
        android:id="@+id/navigation_host_accommodations"
        android:name="com.example.accommodiq.ui.hostAccommodations.HostAccommodationsFragment"
        android:label="@string/title_host_accommodations"
        tools:layout="@layout/fragment_host_accommodations" />

</navigation>