<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/reservation_card_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_background"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/reservation_accommodation_image"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/city_center_apartment"
            app:shapeAppearanceOverlay="@style/roundedImageView"
            app:srcCompat="@drawable/accommodation_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/reservation_accommodation_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/inter"
                android:text="@string/city_center_apartment"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/reservation_accommodation_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawablePadding="2dp"
                android:text="@string/location_address"
                app:drawableStartCompat="@drawable/location_icon" />

            <TextView
                android:id="@+id/reservation_guests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawablePadding="2dp"
                android:text="@string/reservation_guests"
                app:drawableStartCompat="@drawable/guest_icon" />

            <TextView
                android:id="@+id/reservation_guest_info"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reservation_guest_info"
                android:drawableStart="@drawable/ic_person"/>

            <TextView
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_range"
                android:fontFamily="@font/inter"
                android:id="@+id/reservation_date_range"/>

            <TextView
                android:id="@+id/reservation_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/reservation_status"
                app:drawableStartCompat="@drawable/status_icon"
                android:drawablePadding="2dp"/>

            <TextView
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_price"
                android:fontFamily="@font/inter"
                android:textStyle="bold"
                android:id="@+id/reservation_total_price"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/guest_reservation_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/delete_reservation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/delete_reservation"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/cancel_reservation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_reservation"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/host_reservation_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/accept_reservation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/accept_reservation"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/decline_reservation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/decline_reservation"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>

</LinearLayout>