<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_background"
    android:padding="10dp"
    android:id="@+id/accommodation_card_item"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/review_user_name"
            android:fontFamily="@font/inter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review_user_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginEnd="5dp" />

        <RatingBar
            android:id="@+id/review_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:ratingBarStyleSmall"
            android:progressTint="@color/black"
            android:numStars="5"
            android:rating="4.92"
            android:max="5"
            android:paddingTop="7dp" />

        <TextView
            android:id="@+id/review_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="textEnd"
            android:text="@string/review_date"/>

    </LinearLayout>

    <TextView
        android:id="@+id/review_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/review_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/inter"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/imageViewReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_report"
            android:contentDescription="@string/report_review"
            android:padding="5dp"/>

        <ImageView
            android:id="@+id/imageViewDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"
            android:contentDescription="@string/delete_review"
            android:padding="5dp"/>
    </LinearLayout>

</LinearLayout>