<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.financialReports.FinancialReportFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_margin="5dp"
            android:id="@+id/financial_report_date_range_search"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/date_range_hint"
            android:textSize="15sp" />
        <Button
            android:id="@+id/financial_report_search_btn"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/title_search" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/export_to_pdf_btn"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/export_to_pdf" />
        <Button
            android:id="@+id/accommodation_reports_btn"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/accommodation_report"
            android:textSize="11sp"/>
    </LinearLayout>

    <TextView
        android:layout_margin="5dp"
        android:id="@+id/financial_report_total_revenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_revenue"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <org.eazegraph.lib.charts.PieChart
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/reports_pie_chart"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="6dp"
        android:layout_weight="1"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/financial_report_card" />

</LinearLayout>